# android-libs

./: .gitignore  build_all.sh
asio/asio/include/asio/detail/: config.hpp
boost/: Android.mk  README.md  build-android.sh
boost/configs/: user-config-boost-1_48_0-armeabi-v7a.jam  user-config-boost-1_48_0-armeabi.jam  user-config-boost-1_48_0-x86.jam  user-config-boost-1_55_0-x86.jam
liblzma/: CMakeLists.txt
libogg/: Android.mk  CMakeLists.txt  CMakeLists.txt~  build.sh~
libogg/include/ogg/: config_types.h~
libpng/: CMakeLists.txt  CMakeLists.txt~  build.sh~
libvorbis/: Android.mk  CMakeLists.txt  CMakeLists.txt~
lua/: CMakeLists.txt  CMakeLists.txt~  build.sh
luajit/: Android.mk~  build-ios.sh  build.sh  build.sh~
minizip/: CMakeLists.txt  ioapi.c  ioapi_mem.c
openal/: Android.mk  CMakeLists.txt  CMakeLists.txt~  build.sh~
openssl/: CMakeLists.txt  CMakeLists.txt~  build.sh~  build_x86.sh
openssl/src/crypto/: CMakeLists.txt  CMakeLists.txt~
openssl/src/ssl/: CMakeLists.txt
physfs/: CMakeLists.txt  CMakeLists.txt~
protobuf/: CMakeLists.txt
protobuf/cmake/: install.cmake
protobuf/src/google/protobuf/compiler/: command_line_interface.cc
sdl2/: CMakeLists.txt
sdl2/src/core/android/: SDL_android.h~
stduuid/: CMakeLists.txt
stduuid/cmake/: Config.cmake.in
